force-app/main/default/objects/TrueCostSystemVariables__c/TrueCostSystemVariables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Variables to control the TrueCost site without touching code.  These can differ from one environment to another.</description>
    <label>TrueCostSystemVariables</label>
</CustomObject>