force-app/main/default/objects/TrueCostSystemVariables__c/fields/Analytics_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Group_ID__c</fullName>
    <description>ID for the google analytics chatter group</description>
    <inlineHelpText>ID for the google analytics chatter group</inlineHelpText>
    <label>Analytics Group ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>