force-app/main/default/objects/TrueCostSystemVariables__c/fields/bounce__c.field-meta.xml
<CustomField>
    <fullName>bounce__c</fullName>
    <label>bounce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>