force-app/main/default/objects/TrueCostSystemVariables__c/fields/bounceAPI__c.field-meta.xml
<CustomField>
    <fullName>bounceAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>bounceAPI</label>
    <type>Checkbox</type>
</CustomField>