force-app/main/default/objects/TrueCostSystemVariables__c/fields/CertName__c.field-meta.xml
<CustomField>
    <fullName>CertName__c</fullName>
    <label>CertName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>