force-app/main/default/objects/TrueCostSystemVariables__c/fields/Chat_is_Available__c.field-meta.xml
<CustomField>
    <fullName>Chat_is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you want Chat option to show up for customers (only shows up if agent is available)</description>
    <inlineHelpText>Check this box if you want Chat option to show up for customers (only shows up if agent is available)</inlineHelpText>
    <label>Chat is Available</label>
    <type>Checkbox</type>
</CustomField>