force-app/main/default/objects/TrueCostSystemVariables__c/fields/CMEUser__c.field-meta.xml
<CustomField>
    <fullName>CMEUser__c</fullName>
    <label>CMEUser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>