force-app/main/default/objects/TrueCostSystemVariables__c/fields/Default_Plans_to_Show__c.field-meta.xml
<CustomField>
    <fullName>Default_Plans_to_Show__c</fullName>
    <defaultValue>4</defaultValue>
    <description>How many plans should be shown by default on the shopping page.  Make this a multiple of 4 for visual evenness</description>
    <inlineHelpText>How many plans should be shown by default on the shopping page.  Make this a multiple of 4 for visual evenness</inlineHelpText>
    <label>Default Plans to Show</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>