force-app/main/default/objects/TrueCostSystemVariables__c/fields/Facebook_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_App_ID__c</fullName>
    <description>App ID of the facebook app that can moderate comments (merges moderation with CNP CorpComm&#39;s moderation of other FB pages)</description>
    <inlineHelpText>App ID of the facebook app that can moderate comments (merges moderation with CNP CorpComm&#39;s moderation of other FB pages)</inlineHelpText>
    <label>Facebook App ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>