force-app/main/default/objects/TrueCostSystemVariables__c/fields/Facebook_Moderator_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Moderator_ID__c</fullName>
    <description>ID of the individual facebook account that can moderate comments for the page.</description>
    <inlineHelpText>ID of the individual facebook account that can moderate comments for the page.</inlineHelpText>
    <label>Facebook Moderator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>