force-app/main/default/objects/TrueCostSystemVariables__c/fields/Facebook_sso_initialize__c.field-meta.xml
<CustomField>
    <fullName>Facebook_sso_initialize__c</fullName>
    <description>url for the sso initialization page (to start a new flow)</description>
    <inlineHelpText>url for the sso initialization page (to start a new flow)</inlineHelpText>
    <label>Facebook sso initialize</label>
    <length>255</length>
    <type>Text</type>
</CustomField>