force-app/main/default/objects/TrueCostSystemVariables__c/fields/Main_URL__c.field-meta.xml
<CustomField>
    <fullName>Main_URL__c</fullName>
    <description>The base URL for users to get to TrueCost (may differ by environment)</description>
    <inlineHelpText>The base URL for users to get to TrueCost (may differ by environment)</inlineHelpText>
    <label>Main URL</label>
    <type>Url</type>
</CustomField>