force-app/main/default/objects/TrueCostSystemVariables__c/fields/Private_Beta__c.field-meta.xml
<CustomField>
    <fullName>Private_Beta__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Switches the site to private beta.  Registration requires a cookie placed after a successful entry of the invitation code with a matching email address.  

Unchecking this box allows self-registration by the general public and removes links to the private beta home page.</description>
    <inlineHelpText>Switches the site to private beta.  Registration requires a cookie placed after a successful entry of the invitation code with a matching email address.</inlineHelpText>
    <label>Private Beta</label>
    <type>Checkbox</type>
</CustomField>