force-app/main/default/objects/TrueCostSystemVariables__c/fields/RegisterURL__c.field-meta.xml
<CustomField>
    <fullName>RegisterURL__c</fullName>
    <label>RegisterURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>