force-app/main/default/objects/TrueCostSystemVariables__c/fields/REST_URL__c.field-meta.xml
<CustomField>
    <fullName>REST_URL__c</fullName>
    <label>REST URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>