force-app/main/default/objects/TrueCostSystemVariables__c/fields/Sales_Phone_in_Header__c.field-meta.xml
<CustomField>
    <fullName>Sales_Phone_in_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the sales phone number be featured prominently in the header?</description>
    <inlineHelpText>Should the sales phone number be featured prominently in the header?</inlineHelpText>
    <label>Sales Phone in Header</label>
    <type>Checkbox</type>
</CustomField>