force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_About_TrueCost_in_private_beta__c.field-meta.xml
<CustomField>
    <fullName>Show_About_TrueCost_in_private_beta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make the About TrueCost section public during private beta</description>
    <inlineHelpText>Check this box to make the About TrueCost section public during private beta</inlineHelpText>
    <label>Show About TrueCost in private beta</label>
    <type>Checkbox</type>
</CustomField>