force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_Blog_in_Private_Beta__c.field-meta.xml
<CustomField>
    <fullName>Show_Blog_in_Private_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make the blog public during the private beta</description>
    <inlineHelpText>Check this box to make the blog public during the private beta</inlineHelpText>
    <label>Show Blog in Private Beta</label>
    <type>Checkbox</type>
</CustomField>