force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_cents_per_kWh__c.field-meta.xml
<CustomField>
    <fullName>Show_cents_per_kWh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show cents per kWh</label>
    <type>Checkbox</type>
</CustomField>