force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_Facebook_Comments__c.field-meta.xml
<CustomField>
    <fullName>Show_Facebook_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the facebook comments widget appear on the TrueCost sites?</description>
    <inlineHelpText>Should the facebook comments widget appear on the TrueCost sites?</inlineHelpText>
    <label>Show Facebook Comments</label>
    <type>Checkbox</type>
</CustomField>