force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_Index_in_Private_Beta__c.field-meta.xml
<CustomField>
    <fullName>Show_Index_in_Private_Beta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make the index public during private Beta</description>
    <inlineHelpText>Check this box to make the index public during private Beta</inlineHelpText>
    <label>Show Index in Private Beta</label>
    <type>Checkbox</type>
</CustomField>