force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_invitation_code_are__c.field-meta.xml
<CustomField>
    <fullName>Show_invitation_code_are__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should the Private Beta Home Page show the place where users can put in invitation codes?</description>
    <inlineHelpText>Should the Private Beta Home Page show the place where users can put in invitation codes?</inlineHelpText>
    <label>Show invitation code are</label>
    <type>Checkbox</type>
</CustomField>