force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_only_Published_content__c.field-meta.xml
<CustomField>
    <fullName>Show_only_Published_content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All content displayed must have published = true.  This can be used to allow temporary content, previews in QA, and other tricks. 

This must not change in production once the site is live.</description>
    <inlineHelpText>All content displayed must have published = true.  This can be used to allow temporary content, previews in QA, and other tricks. 

This must not change in production once the site is live.</inlineHelpText>
    <label>Show only Published content</label>
    <type>Checkbox</type>
</CustomField>