force-app/main/default/objects/TrueCostSystemVariables__c/fields/Show_Small_Business__c.field-meta.xml
<CustomField>
    <fullName>Show_Small_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turn on small business on the entire TC site.</description>
    <inlineHelpText>Toggle Small Business</inlineHelpText>
    <label>Show Small Business</label>
    <type>Checkbox</type>
</CustomField>