force-app/main/default/objects/TrueCostSystemVariables__c/fields/sslurl__c.field-meta.xml
<CustomField>
    <fullName>sslurl__c</fullName>
    <label>sslurl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>