force-app/main/default/objects/TrueCostSystemVariables__c/fields/TriEagleAPI__c.field-meta.xml
<CustomField>
    <fullName>TriEagleAPI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriEagleAPI</label>
    <type>Checkbox</type>
</CustomField>