force-app/main/default/objects/TrueCostSystemVariables__c/fields/UHITCallback__c.field-meta.xml
<CustomField>
    <fullName>UHITCallback__c</fullName>
    <label>UHITCallback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>